# cmake_try

./: CMakeLists.txt  cmakeforavr.txt  config.h.in  test.c
inc/: header.h
newlib/: CMakeLists.txt  lib.c  lib.h
src/: source.c
